--- a/about.html
+++ b/about.html
@@ -9,14 +9,11 @@
     <meta name="google-site-verification" content="8Ds7XTj8rCqy9I93tGIylV6meUg8JKTWYfMa2q6hyCs" />
     <title>Casa Plastica | Sustentabilidade e Reciclagem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Preloading fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
-    </noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -26,6 +23,8 @@
         <section id="about">
             <h1>Quem Somos</h1>
             <p>A Casa Plastica é uma empresa fundada em 2018, dedicada à luta contra a poluição plástica e à promoção da sustentabilidade. Nossa missão é transformar resíduos plásticos, especialmente os retirados do oceano, em materiais úteis por meio da reciclagem, tecnologia e educação ambiental.</p>
+            <img src="media/hero-10.jpg" alt="Community Workshop" class="section-image">
+            
         </section>
 
         <section id="history">
@@ -33,10 +32,14 @@
             <p>
                 A Casa Plastica nasceu em Saquarema, impulsionada pela necessidade urgente de soluções práticas e inovadoras para o problema da poluição plástica, particularmente nos oceanos. Inspirados pelo movimento global <strong>Precious Plastic</strong>, começamos nossa jornada desenvolvendo máquinas acessíveis para a transformação de resíduos plásticos, como trituradores e extrusoras, com o objetivo de capacitar comunidades e conscientizar a sociedade sobre o impacto do plástico no meio ambiente.
             </p>
+            <img src="media/hero-8.jpg" alt="Community Workshop" class="section-image">
+
             <p>
                 Desde 2018, participamos de diversos eventos importantes, como o <strong>Festival de Música e Ecologia de Ilha Grande</strong> e o <strong>Saquarema Surf Festival</strong>, sempre promovendo a ideia de que o plástico pode ser um recurso transformador. Através da união de educação e tecnologia, temos realizado workshops, palestras e construído máquinas recicladoras para empoderar comunidades locais.
             </p>
         </section>
+        <img src="media/hero-7.jpg" alt="Community Workshop" class="section-image">
+
 
         <section id="mission">
             <h2>Missão</h2>
