--- a/header.html
+++ b/header.html
@@ -1,7 +1,15 @@
 <header> 
-    <nav>
+    <nav class="nav-container">
         <a href="index.html"><img src="logo.png" alt="Casa Plastica Logo" class="logo"></a>
-        <ul>
+        <button id="menu-toggle" aria-label="Toggle Menu">
+            <!-- SVG for Hamburger Icon -->
+            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="3" y1="12" x2="21" y2="12"></line>
+                <line x1="3" y1="6" x2="21" y2="6"></line>
+                <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+        </button>
+        <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="impact.html">Impacto</a></li>
             <li><a href="projects.html">Projetos</a></li>
