--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,11 @@
     <meta name="google-site-verification" content="8Ds7XTj8rCqy9I93tGIylV6meUg8JKTWYfMa2q6hyCs" />
     <title>Casa Plastica | Sustentabilidade e Reciclagem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Preloading fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
-    </noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
