--- a/impact.html
+++ b/impact.html
@@ -9,16 +9,11 @@
     <meta name="google-site-verification" content="8Ds7XTj8rCqy9I93tGIylV6meUg8JKTWYfMa2q6hyCs" />
     <title>Casa Plastica | Sustentabilidade e Reciclagem</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Preloading fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
-    <noscript>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
-    </noscript>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -28,7 +23,7 @@
         <section id="impact">
             <h1>Nosso Impacto</h1>
             <p>A Casa Plastica tem orgulho de seus resultados significativos ao longo dos anos, desde 2018. Aqui estão alguns números e estatísticas que mostram o impacto de nossas ações:</p>
-
+            
             <div class="impact-numbers">
                 <div class="impact-item">
                     <i class="fas fa-users fa-3x"></i>
@@ -51,11 +46,13 @@
                     <p><strong>Máquinas</strong> de reciclagem construídas e instaladas em comunidades locais para a transformação de plásticos.</p>
                 </div>
             </div>
+            <img src="media/hero-9.jpg" alt="Community Workshop" class="section-image">
             
 
             <section id="highlights">
                 <h2>Destaques dos Projetos</h2>
                 <p>A Casa Plastica não só realiza ações de reciclagem, mas também promove um impacto duradouro nas comunidades com as quais trabalha. Aqui estão alguns destaques:</p>
+                <img src="media/hero-5.jpg" alt="Community Workshop" class="section-image">
 
                 <ul>
                     <li><strong>Projeto Mexirica Navegante:</strong> Esta máquina 2-em-1 de trituração e extrusão de plásticos já reciclou toneladas de plásticos oceânicos e foi um divisor de águas na capacitação de comunidades para lidar com seus resíduos.</li>
