--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>Somos a Casa Plastica, uma empresa dedicada à reciclagem de plásticos oceânicos e à criação de uma
                     economia circular.</p>
                 <p>Unimos tecnologia, educação e inovação para empoderar comunidades e preservar o meio ambiente.</p>
-                <a href="#about" class="btn">Saiba mais</a>
+                <!-- <a href="#about" class="btn">Saiba mais</a> -->
             </div>
             <img src="media/hero-1.jpg" alt="Ocean and Plastic Recycling" class="hero-image">
         </section>
