--- a/about.html
+++ b/about.html
@@ -62,6 +62,7 @@
                     <li><strong>Comunidade:</strong> Promover a união e o empoderamento das comunidades locais.</li>
                 </ul>
             </p>
+            <a href="impact.html" class="btn">Saiba mais sobre o impacto</a>
         </section>
 
         <section id="initiatives">
@@ -75,6 +76,8 @@
                 <li><strong>Participação no Oi Rio Pro e Vivo Rio Pro:</strong> Conscientização ambiental e transformação de plásticos em campeonatos de surfe.</li>
                 <li><strong>Programa Centelha:</strong> Desenvolvimento de soluções inovadoras para a reciclagem de plásticos, com foco em replicabilidade e inovação tecnológica.</li>
             </ul>
+            <a href="projects.html" class="btn">Veja nossos projetos</a>
+
         </section>
     </main>
 
