--- a/impact.html
+++ b/impact.html
@@ -60,6 +60,8 @@
                     <li><strong>Saquarema Surf Festival:</strong> Nosso envolvimento com a comunidade do surfe, usando o evento para conscientizar sobre a poluição oceânica e demonstrar tecnologias de reciclagem de plásticos.</li>
                     <li><strong>Parcerias com a ONG Somos Natureza:</strong> Juntos, implementamos soluções sustentáveis em Ilha Grande, instalando máquinas e realizando workshops que transformaram a realidade da reciclagem na região.</li>
                 </ul>
+                <a href="projects.html" class="btn">Veja nossos projetos</a>
+
             </section>
 
             <!-- <section id="graphics">
