--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
                     A Casa Plastica participou do Programa Centelha, uma iniciativa de fomento à inovação tecnológica. Desenvolvemos novas soluções para a reciclagem de plásticos, com foco em tornar as máquinas e processos mais acessíveis e replicáveis, criando um modelo que pode ser adotado em várias comunidades.
                 </p>
             </article>
-            <a href="impact.html" class="btn">Saiba mais sobre o impacto</a>
+            <a href="about.html" class="btn">Saiba mais sobre a empresa</a>
         </section>
 
     </main>
