--- a/about.html
+++ b/about.html
@@ -51,10 +51,7 @@
         <section id="vision-values">
             <h2>Visão e Valores</h2>
             <p>
-                **Visão**: Ser uma referência global em soluções sustentáveis para a reciclagem de plásticos, inspirando um futuro onde o plástico é totalmente reaproveitado, e onde as comunidades são capacitadas a liderar iniciativas de economia circular.
-            </p>
-            <p>
-                **Valores**: 
+                Ser uma referência global em soluções sustentáveis para a reciclagem de plásticos, inspirando um futuro onde o plástico é totalmente reaproveitado, e onde as comunidades são capacitadas a liderar iniciativas de economia circular.
                 <ul>
                     <li><strong>Sustentabilidade:</strong> Agir em prol do meio ambiente e do uso consciente de recursos.</li>
                     <li><strong>Inovação:</strong> Criar tecnologias acessíveis e práticas para a transformação de resíduos plásticos.</li>
@@ -81,7 +78,7 @@
         </section>
     </main>
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
     <script src="main.js"></script>
 
