--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     </main>
 
     <!-- Footer será carregado aqui -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
     <script src="main.js"></script>
 </body>
