--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
         <a href="index.html"><img src="logo.png" alt="Casa Plastica Logo" class="logo"></a>
         <button id="menu-toggle" aria-label="Toggle Menu">
             <!-- SVG for Hamburger Icon -->
-            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="#333" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="3" y1="12" x2="21" y2="12"></line>
                 <line x1="3" y1="6" x2="21" y2="6"></line>
                 <line x1="3" y1="18" x2="21" y2="18"></line>
