--- a/projects.html
+++ b/projects.html
@@ -119,10 +119,18 @@
 
     </main>
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
     <script src="main.js"></script>
 
 </body>
 
 </html>
+
+<style>
+    .project p {
+        margin: 0 20px;
+        padding: 10px;
+        border-left: 3px solid #999;
+    }
+</style>
