--- a/impact.html
+++ b/impact.html
@@ -85,7 +85,7 @@
         </section>
     </main>
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
     <script src="main.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
