--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
 <p>&copy; 2024 Projeto Casa Plastica. Todos os direitos reservados.</p>
+<a href="/">Home</a>
 <a href="mailto:projetocasaplastica@gmail.com">Contate-nos</a>
 <a href="https://www.instagram.com/projetocasaplastica" target="_blank">Instagram</a>
