--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<p>&copy; 2024 Projeto Casa Plastica. Todos os direitos reservados.</p>
+<p>&copy; 2024 Casa Plastica</p>
 <a href="/">Home</a>
 <a href="mailto:projetocasaplastica@gmail.com">Contate-nos</a>
 <a href="https://www.instagram.com/projetocasaplastica" target="_blank">Instagram</a>
